# high-perf-cache

./: CMakeLists.txt  README.md
benchmark/: cache_benchmark.cpp  workload_patterns.hpp
build-gcc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example_arc  example_mixed
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  example  example_concurrency  example_lfu  example_lru
examples/: example_arc.cpp  example_concurrency.cpp  example_lfu.cpp  example_lru.cpp  example_mixed.cpp  example_usage.cpp
include/cache/: arc_cache.hpp  cache_interface.hpp  lfu_cache.hpp  lru_cache.hpp  memory_allocator.hpp  metrics.hpp
include/lockfree/: atomic_map.hpp
scripts/: run_examples.ps1  run_examples.sh
src/: arc_cache.cpp  lfu_cache.cpp  lru_cache.cpp  memory_allocator.cpp  metrics.cpp
test/: test_arc.cpp  test_concurrency.cpp  test_lfu.cpp  test_lru.cpp
